--- a/displaytabs/tabs/SchoolUI/EnrollmentSearch.html
+++ b/displaytabs/tabs/SchoolUI/EnrollmentSearch.html
@@ -6,7 +6,7 @@
         <h3 class="box-title">Search</h3>
         <div class="box-tools pull-right" data-toggle="tooltip" title="" data-original-title="Status">
             <div style="display: flex;">
-                <div style="display: flex; margin-top: 5px; margin-left: 10px;" class="hand btnRecordDownloadCSV" module="AdmissionUI">
+                <div style="display: flex; margin-top: 5px; margin-left: 10px;" class="hand btnRecordDownloadCSV" module="EnrollmentUI">
                     <i class="fa fa-fw fa-download" style="margin-top: 5px;"></i> <i>CSV</i>
                 </div>
             </div>
@@ -14,10 +14,10 @@
     </div>
     <div class="box-body"> 
         <div class="form-group">
-            <input type="text" class="form-control searchFilter" module="AdmissionUI" tabName="_TABNAME_" name="mainFilter" placeholder="Search Banking" rowIndex="0">
+            <input type="text" class="form-control searchFilter" module="EnrollmentUI" tabName="_TABNAME_" name="mainFilter" placeholder="Search Student" rowIndex="0">
         </div>
     </div>
 
-    <div class="box-body searchRecords" module="AdmissionUI" tabName="_TABNAME_">
+    <div class="box-body searchRecords" module="EnrollmentUI" tabName="_TABNAME_">
     </div>
 </div>
