In Progress - Demo Site

--- a/home.html
+++ b/home.html
@@ -484,6 +484,7 @@
   <script src="js/modules/submodules/ConferenceRoomUI.js"></script>
   <script src="js/modules/submodules/AdmissionUI.js"></script>
   <script src="js/modules/submodules/EnrollmentUI.js"></script>
+  <script src="js/modules/submodules/SchoolCashierUI.js"></script>
 
   <script src="js/main-initializer.js"></script>
 
