In Progress - School Demo

--- a/displaytabs/GradesUI-MainTemplate.html
+++ b/displaytabs/GradesUI-MainTemplate.html
@@ -10,7 +10,7 @@
             <div class="nav-tabs-custom" style="margin-top: 5px;">
                 <ul class="nav nav-tabs">
                     <li class="tab-pane active">
-                        <a href="#GradesPerSection" data-toggle="tab" aria-expanded="true">Grades Per Section/Block</a>
+                        <a href="#GradesPerSchedule" data-toggle="tab" aria-expanded="true">Grades Per Schedule</a>
                     </li>
                     <li class="tab-pane">
                         <a href="#GradesPerStudent" data-toggle="tab" aria-expanded="false">Grades Per Student</a>
@@ -20,17 +20,17 @@
                     </li>
                 </ul>
                 <div class="tab-content no-padding"> 
-                    <div class="tab-pane active" id="GradesPerSection">
+                    <div class="tab-pane active" id="GradesPerSchedule">
                         <div style="background: #ecf0f5;">
                             <div style="margin: 15px 0px;">
                                 <div class="box box-warning">
                                     <div class="box-header with-border">
-                                        <h3 class="box-title">Grades Per Section/Block</h3>
+                                        <h3 class="box-title">Grades Per Schedule</h3>
                                         <div class="box-tools pull-right" data-toggle="tooltip" title="" data-original-title="Status">
                                         </div>
                                     </div>
                                     <div class="box-body">
-                                        <div class="DisplayTab" tabName="Grades" module2="SchoolUI" tabUrl="GradesPerSectionProfileMain"></div>
+                                        <div class="DisplayTab" tabName="Grades" module2="SchoolUI" tabUrl="GradesPerScheduleProfileMain"></div>
                                     </div>
                                 </div>
                             </div>
