--- a/displaytabs/tabs/AllNotificationUI/NotificationProfileMain.html
+++ b/displaytabs/tabs/AllNotificationUI/NotificationProfileMain.html
@@ -1,98 +1,98 @@
 <div style="display: flex; flex: 100%; flex-wrap: wrap;">
-    <input rowIndex="0" type="hidden" class="form-control editRecord mainRecordId" module="NotificationUI" name="NotificationId">
-    <input rowIndex="0" type="hidden" class="form-control editRecord" module="NotificationUI" name="code">
+    <input rowIndex="0" type="hidden" class="form-control editRecord mainRecordId" module="AdmissionUI" name="AdmissionId">
+    <input rowIndex="0" type="hidden" class="form-control editRecord" module="AdmissionUI" name="code">
 
     <div class="form-group" style="flex: 3; margin-left: 15px;">
         <label class="control-label">Admitted By</label>
         <div class="input-group" style="width: 100%;">
-            <input rowIndex="0" type="text" class="form-control autocomplete" name="admittedByCode" placeholder="Payee" module="NotificationUI" autoname="admittedByCode" helptitle="admittedByCode">
-            <input rowIndex="0" class="form-control editRecord HiddenAutoComplete" name="admittedByCode" type="hidden" module="NotificationUI" autoNameField="admittedByCode" value="">
-            <div class="autocomplete-items" rowIndex="0" module="NotificationUI" autoname="admittedByCode">
+            <input rowIndex="0" type="text" class="form-control autocomplete" name="admittedByCode" placeholder="Payee" module="AdmissionUI" autoname="admittedByCode" helptitle="admittedByCode">
+            <input rowIndex="0" class="form-control editRecord HiddenAutoComplete" name="admittedByCode" type="hidden" module="AdmissionUI" autoNameField="admittedByCode" value="">
+            <div class="autocomplete-items" rowIndex="0" module="AdmissionUI" autoname="admittedByCode">
             </div>
         </div> 
     </div>
     <div class="form-group" style="flex: 1; margin-left: 15px;">
         <label>Invoice #</label>
-        <input type="text" rowIndex="0" class="form-control editRecord" module="NotificationUI"
+        <input type="text" rowIndex="0" class="form-control editRecord" module="AdmissionUI"
             name="invoiceId" tabName="_TABNAME_">
     </div>
     <div class="form-group" style="flex: 1; margin-left: 15px;">
         <label>Grade Level</label>
-        <input type="text" rowIndex="0" class="form-control editRecord" module="NotificationUI"
+        <input type="text" rowIndex="0" class="form-control editRecord" module="AdmissionUI"
             name="gradeLevel" tabName="_TABNAME_">
     </div>
     <div class="form-group" style="flex: 1; margin-left: 15px;">
         <label>Course</label>
-        <input type="text" rowIndex="0" class="form-control editRecord" module="NotificationUI"
+        <input type="text" rowIndex="0" class="form-control editRecord" module="AdmissionUI"
             name="course" tabName="_TABNAME_">
     </div>
     <div class="flex-break"></div>
     <div class="form-group" style="flex: 3; margin-left: 15px;">
         <label>Last Name</label>
-        <input type="text" rowIndex="0" class="form-control editRecord" module="NotificationUI"
+        <input type="text" rowIndex="0" class="form-control editRecord" module="AdmissionUI"
             name="lastName" tabName="_TABNAME_">
     </div>
     <div class="form-group" style="flex: 3; margin-left: 15px;">
         <label>First Name</label>
-        <input type="text" rowIndex="0" class="form-control editRecord" module="NotificationUI"
+        <input type="text" rowIndex="0" class="form-control editRecord" module="AdmissionUI"
             name="firstName" tabName="_TABNAME_">
     </div>
     <div class="form-group" style="flex: 1; margin-left: 15px;">
         <label>M. I.</label>
-        <input type="text" rowIndex="0" class="form-control editRecord" module="NotificationUI"
+        <input type="text" rowIndex="0" class="form-control editRecord" module="AdmissionUI"
             name="middleInitial" tabName="_TABNAME_">
     </div>
     <div class="form-group" style="flex: 1; margin-left: 15px;">
         <label>Gender</label>
-        <input type="text" rowIndex="0" class="form-control editRecord" module="NotificationUI"
+        <input type="text" rowIndex="0" class="form-control editRecord" module="AdmissionUI"
             name="gender" tabName="_TABNAME_">
     </div>
     <div class="flex-break"></div>
     <div class="form-group" style="flex: 3; margin-left: 15px;">
         <label>Father</label>
-        <input type="text" rowIndex="0" class="form-control editRecord" module="NotificationUI"
+        <input type="text" rowIndex="0" class="form-control editRecord" module="AdmissionUI"
             name="father" tabName="_TABNAME_">
     </div>
     <div class="form-group" style="flex: 3; margin-left: 15px;">
         <label>Mother</label>
-        <input type="text" rowIndex="0" class="form-control editRecord" module="NotificationUI"
+        <input type="text" rowIndex="0" class="form-control editRecord" module="AdmissionUI"
             name="mother" tabName="_TABNAME_">
     </div>
     <div class="form-group" style="flex: 2; margin-left: 15px;">
         <label>Religion</label>
-        <input type="text" rowIndex="0" class="form-control editRecord" module="NotificationUI"
+        <input type="text" rowIndex="0" class="form-control editRecord" module="AdmissionUI"
             name="religion" tabName="_TABNAME_">
     </div>
     <div class="flex-break"></div>
     <div class="form-group" style="flex: 3; margin-left: 15px;">
         <label>Email</label>
-        <input type="text" rowIndex="0" class="form-control editRecord" module="NotificationUI"
+        <input type="text" rowIndex="0" class="form-control editRecord" module="AdmissionUI"
             name="email" tabName="_TABNAME_">
     </div>
     <div class="form-group" style="flex: 3; margin-left: 15px;">
         <label>Address</label>
-        <input type="text" rowIndex="0" class="form-control editRecord" module="NotificationUI"
+        <input type="text" rowIndex="0" class="form-control editRecord" module="AdmissionUI"
             name="address" tabName="_TABNAME_">
     </div>
     <div class="form-group" style="flex: 2; margin-left: 15px;">
         <label>Phone</label>
-        <input type="text" rowIndex="0" class="form-control editRecord" module="NotificationUI"
+        <input type="text" rowIndex="0" class="form-control editRecord" module="AdmissionUI"
             name="telNum" tabName="_TABNAME_">
     </div>
     <div class="flex-break"></div>
     <div class="form-group" style="flex: 1; margin-left: 15px;">
         <label>Birth Date</label>
-        <input type="text" rowIndex="0" class="form-control editRecord calendar" module="NotificationUI"
+        <input type="text" rowIndex="0" class="form-control editRecord calendar" module="AdmissionUI"
             name="birthDate" tabName="_TABNAME_">
     </div>
     <div class="form-group" style="flex: 1; margin-left: 15px;">
         <label>Age</label>
-        <input type="text" rowIndex="0" class="form-control editRecord" module="NotificationUI"
+        <input type="text" rowIndex="0" class="form-control editRecord" module="AdmissionUI"
             name="age" tabName="_TABNAME_">
     </div>
     <div class="form-group" style="flex: 2; margin-left: 15px;">
         <label>Birth Place</label>
-        <input type="text" rowIndex="0" class="form-control editRecord" module="NotificationUI"
+        <input type="text" rowIndex="0" class="form-control editRecord" module="AdmissionUI"
             name="birthPlace" tabName="_TABNAME_">
     </div>
 </div>
