--- a/home.html
+++ b/home.html
@@ -485,6 +485,7 @@
   <script src="js/modules/submodules/AdmissionUI.js"></script>
   <script src="js/modules/submodules/EnrollmentUI.js"></script>
   <script src="js/modules/submodules/SchoolCashierUI.js"></script>
+  <script src="js/modules/submodules/NotificationUI.js"></script>
 
   <script src="js/main-initializer.js"></script>
 
@@ -503,6 +504,7 @@
   <script src="js/modules/ReferenceUI.js"></script>
   <script src="js/modules/ReportUI.js"></script>
   <script src="js/modules/ConferenceUI.js"></script>
+  <script src="js/modules/AllNotificationUI.js"></script>
 
   <script src="js/meetingui/GenericMeetingUI.js"></script>
   <script src="js/meetingui/FacultyMeetingUI.js"></script>
