In Progress - Demo Site

--- a/home.html
+++ b/home.html
@@ -429,6 +429,7 @@
 
 
   <script src="js/mainJS.js"></script>
+  <script src="js/storage.js"></script>
 
   <script src="js/meetingroom/p2p.js"></script>
   <script src="js/meetingroom/roomSignal.js"></script>
