--- a/login.html
+++ b/login.html
@@ -87,6 +87,7 @@
     <script src="js/alertConfirm.js"></script>
 
     <script src="js/constants.js"></script>
+    <script src="js/storage.js"></script>
     <script>
         $(function () {
             sessionStorage.clear();
