--- a/displaytabs/AllNotificationUI-MainTemplate.html
+++ b/displaytabs/AllNotificationUI-MainTemplate.html
@@ -24,20 +24,21 @@
                                     <div class="box-header with-border">
                                         <h3 class="box-title">Notification</h3>
                                         <div class="box-tools pull-right" data-toggle="tooltip" title="" data-original-title="Status">
-                                            <button type="button" class="btn btn-success btnSaveRecord" module="NotificationUI">Save Notification</button>
-                                            <button type="button" class="btn btn-info btnNewRecord" module="NotificationUI">
-                                                <i class="fa fa-plus"></i> New Notification</button>
-                                            <button type="button" class="btn btn-info btnReport" MainMenu="AllNotificationUI" module="NotificationUI" style="margin-left: 10px;">
-                                                <i class="fa fa-file-text-o"></i> Report</button>
+                                            <div class="btn-group">
+                                                <div class="input-group">
+                                                    <input type="text" class="form-control searchFilter" module="NotificationUI" tabName="_TABNAME_" name="mainFilter" placeholder="Search Notification" rowIndex="0">
+                                                    <span class="input-group-addon"><i class="fa fa-search"></i></span>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="box-body">
-                                        <div class="DisplayTab" tabName="Notification" module2="AllNotificationUI" tabUrl="NotificationProfileMain"></div>
+                                        <div class="DisplayTab" tabName="Notification" module2="AllNotificationUI" tabUrl="NotificationSearch"></div>
                                     </div>
                                 </div>
                             </div>
                             <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
-                                <div class="DisplayTab" tabName="Notification" module2="AllNotificationUI" tabUrl="NotificationSearch"></div>
+                                <div class="DisplayTab" tabName="Notification" module2="AllNotificationUI" tabUrl="NotificationProfileMain"></div>
                             </div>
                         </div>
                     </div>
