--- a/displaytabs/tabs/AllNotificationUI/NotificationSearch.html
+++ b/displaytabs/tabs/AllNotificationUI/NotificationSearch.html
@@ -1,23 +1,33 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
 <div class="box box-default">
-    <div class="box-header ui-sortable-handle">
+    <!-- <div class="box-header ui-sortable-handle">
         <i class="fa fa-users"></i>
         <h3 class="box-title">Search</h3>
         <div class="box-tools pull-right" data-toggle="tooltip" title="" data-original-title="Status">
             <div style="display: flex;">
                 <div style="display: flex; margin-top: 5px; margin-left: 10px;" class="hand btnRecordDownloadCSV" module="NotificationUI">
                     <i class="fa fa-fw fa-download" style="margin-top: 5px;"></i> <i>CSV</i>
+                    <input type="text" class="form-control searchFilter" module="NotificationUI" tabName="_TABNAME_" name="mainFilter" placeholder="Search Notification" rowIndex="0">
                 </div>
             </div>
         </div>
-    </div>
-    <div class="box-body"> 
+    </div> -->
+    <!-- <div class="box-body"> 
         <div class="form-group">
             <input type="text" class="form-control searchFilter" module="NotificationUI" tabName="_TABNAME_" name="mainFilter" placeholder="Search Notification" rowIndex="0">
         </div>
-    </div>
+    </div> -->
 
-    <div class="box-body searchRecords" module="NotificationUI" tabName="_TABNAME_">
+    <div class="box-body">
+        <div style="display: flex; flex-wrap: wrap;">
+            <div style="flex: 2"><label>From</label></div>
+            <div style="flex: 2"><label>To</label></div>
+            <div style="flex: 1"><label>Date</label></div>
+            <div style="flex: 4"><label>Message</label></div>
+        </div>
+        <div class="searchRecords" module="NotificationUI" tabName="_TABNAME_">
+
+        </div>
     </div>
 </div>
