--- a/mobile/schoolAbout.html
+++ b/mobile/schoolAbout.html
@@ -29,6 +29,8 @@
 <body>
     <div id="main">
         About Dynamiko School : Todo
+        <div id="callingMobile"></div>
+        <div id="mobileResponse"></div>
     </div>
     <!-- ./wrapper -->
 
@@ -39,11 +41,7 @@
     <script>
         $(function () {
             sessionStorage.clear();
-            var vtoken = utils.getUrlParamValue(window.location.href, "token");
-
-            $("#main").html(vtoken);
-            console.log(`vtoken == ${vtoken}`);
-            schoolAbout.init(vtoken);
+            schoolAbout.init();
         });
     </script>
 </body>
