--- a/mobile/schoolAbout.html
+++ b/mobile/schoolAbout.html
@@ -36,7 +36,7 @@
 
     <link rel="stylesheet" href="css/mobile.css">
     <script src="../js/config.js"></script>
-    <script src="../js/schoolAbout.js"></script>
+    <script src="js/schoolAbout.js"></script>
 
     <script>
         $(function () {
