--- a/mobile/schoolHome.html
+++ b/mobile/schoolHome.html
@@ -34,7 +34,7 @@
 
     <link rel="stylesheet" href="css/mobile.css">
     <script src="../js/config.js"></script>
-    <script src="../js/schoolHome.js"></script>
+    <script src="js/schoolHome.js"></script>
 
     <script>
         $(function () {
