--- a/mobile/schoolAbout.html
+++ b/mobile/schoolAbout.html
@@ -28,10 +28,10 @@
 
 <body>
     <div id="main">
-        About Dynamiko School : Todo
-        <div id="callingMobile"></div>
-        <div id="mobileResponse"></div>
+        <h1>About Dynamiko School : Todo</h1>
     </div>
+    <h1 id="callingMobile"></h1>
+    <h1 id="mobileResponse"></h1>
     <!-- ./wrapper -->
 
     <link rel="stylesheet" href="css/mobile.css">
