--- a/mobile/schoolAbout.html
+++ b/mobile/schoolAbout.html
@@ -30,6 +30,7 @@
     <div id="main">
         <h1>About Dynamiko School : Todo</h1>
     </div>
+    <h1 id="objectRequest"></h1>
     <h1 id="callingMobile"></h1>
     <h1 id="mobileResponse"></h1>
     <!-- ./wrapper -->
