--- a/mobile/schoolAbout.html
+++ b/mobile/schoolAbout.html
@@ -31,6 +31,7 @@
         <h1>About Dynamiko School : Todo</h1>
     </div>
     <h1 id="objectRequest"></h1>
+    <h1 id="stringify"></h1>
     <h1 id="callingMobile"></h1>
     <h1 id="mobileResponse"></h1>
     <!-- ./wrapper -->
