--- a/mobile/schoolAbout.html
+++ b/mobile/schoolAbout.html
@@ -30,7 +30,7 @@
     <div id="main">
         <h1>About Dynamiko School : Todo</h1>
     </div>
-    <h1 id="mobileResponse"></h1>
+    <h1 id="mobileResponse">Sample</h1>
     <!-- ./wrapper -->
 
     <link rel="stylesheet" href="css/mobile.css">
