--- a/mobile/schoolAbout.html
+++ b/mobile/schoolAbout.html
@@ -24,6 +24,10 @@
 
     <!-- datepicker -->
     <script src="../bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
+
+    <script src="../js/config.js"></script>
+    <script src="../js/ajaxCaller.js"></script>
+    <script src="../js/utils.js"></script>
 </head>
 
 <body>
@@ -31,10 +35,10 @@
         <h1>About Dynamiko School : Todo</h1>
     </div>
     <h1 id="mobileResponse">Sample</h1>
+    <div id="announcementList"></div>
     <!-- ./wrapper -->
 
     <link rel="stylesheet" href="css/mobile.css">
-    <script src="../js/config.js"></script>
     <script src="js/schoolAbout.js"></script>
 
     <script>
