--- a/mobile/schoolAbout.html
+++ b/mobile/schoolAbout.html
@@ -25,6 +25,7 @@
     <!-- datepicker -->
     <script src="../bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
 
+    <script src="../js/mainObj.js"></script>
     <script src="../js/config.js"></script>
     <script src="../js/ajaxCaller.js"></script>
     <script src="../js/utils.js"></script>
