--- a/mobile/schoolAbout.html
+++ b/mobile/schoolAbout.html
@@ -27,9 +27,9 @@
     <script src="../bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
 
     <script src="../js/mainObj.js"></script>
-    <script src="../js/config.js"></script>
     <script src="../js/ajaxCaller.js"></script>
     <script src="../js/utils.js"></script>
+    <script src="js/mobileConfig.js"></script>
 </head>
 
 <body>
